Etapa3/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    '.'
    '$'
    TOKEN_ERRO


Grammar

    0 $accept: program $end

    1 program: globalVariable program
    2        | functionDefinition program
    3        | %empty

    4 optionalStatic: TK_PR_STATIC
    5               | %empty

    6 optionalConst: TK_PR_CONST
    7              | %empty

    8 globalVariable: optionalStatic type identifier globalVariableList ';'

    9 globalVariableList: ',' identifier globalVariableList
   10                   | %empty

   11 type: TK_PR_INT
   12     | TK_PR_FLOAT
   13     | TK_PR_CHAR
   14     | TK_PR_BOOL
   15     | TK_PR_STRING

   16 value: TK_LIT_INT
   17      | TK_LIT_FLOAT
   18      | TK_LIT_FALSE
   19      | TK_LIT_TRUE
   20      | TK_LIT_CHAR
   21      | TK_LIT_STRING

   22 functionDefinition: functionHeader commandBlock

   23 functionHeader: optionalStatic type TK_IDENTIFICADOR '(' headerParameters ')'

   24 headerParameters: optionalConst type TK_IDENTIFICADOR headerParametersList
   25                 | %empty

   26 headerParametersList: ',' optionalConst type TK_IDENTIFICADOR headerParametersList
   27                     | %empty

   28 commandBlock: '{' commandList '}'

   29 commandList: command commandList
   30            | %empty

   31 command: variableDeclaration ';'
   32        | attribution ';'
   33        | inputOutput ';'
   34        | functionCall ';'
   35        | shift ';'
   36        | executionControl ';'
   37        | fluxControl ';'
   38        | commandBlock ';'

   39 attribution: TK_IDENTIFICADOR '=' expression
   40            | vector_identifier '=' expression

   41 inputOutput: input
   42            | output

   43 output: TK_PR_OUTPUT TK_IDENTIFICADOR
   44       | TK_PR_OUTPUT value

   45 input: TK_PR_INPUT TK_IDENTIFICADOR

   46 shift: TK_IDENTIFICADOR shiftOperator TK_LIT_INT
   47      | vector_identifier shiftOperator positive_integer

   48 shiftOperator: TK_OC_SL
   49              | TK_OC_SR

   50 executionControl: TK_PR_RETURN expression
   51                 | TK_PR_BREAK
   52                 | TK_PR_CONTINUE

   53 fluxControl: conditional
   54            | while
   55            | for

   56 conditional: TK_PR_IF '(' expression ')' commandBlock else

   57 else: TK_PR_ELSE commandBlock
   58     | %empty

   59 while: TK_PR_WHILE '(' expression ')' TK_PR_DO commandBlock

   60 for: TK_PR_FOR '(' attribution ':' expression ':' attribution ')' commandBlock

   61 expression: orLogicalExpression '?' expression ':' expression
   62           | orLogicalExpression

   63 orLogicalExpression: orLogicalExpression orLogicalOperator andLogicalExpression
   64                    | andLogicalExpression

   65 andLogicalExpression: andLogicalExpression andLogicalOperator bitwiseOrExpression
   66                     | bitwiseOrExpression

   67 bitwiseOrExpression: bitwiseOrExpression bitwiseOrOperator bitwiseAndExpression
   68                    | bitwiseAndExpression

   69 bitwiseAndExpression: bitwiseAndExpression bitwiseAndOperator equalityExpression
   70                     | equalityExpression

   71 equalityExpression: equalityExpression equalityOperator comparisonExpression
   72                   | comparisonExpression

   73 comparisonExpression: comparisonExpression comparisonOperator sumExpression
   74                     | sumExpression

   75 sumExpression: sumExpression sumOperator multiplicationExpression
   76              | multiplicationExpression

   77 multiplicationExpression: multiplicationExpression multiplicationOperator powerExpression
   78                         | powerExpression

   79 powerExpression: powerExpression powerOperator unaryExpression
   80                | unaryExpression

   81 unaryExpression: unaryOperator unaryExpression
   82                | operand

   83 orLogicalOperator: TK_OC_OR

   84 andLogicalOperator: TK_OC_AND

   85 bitwiseOrOperator: '|'

   86 bitwiseAndOperator: '&'

   87 equalityOperator: TK_OC_EQ
   88                 | TK_OC_NE

   89 comparisonOperator: TK_OC_LE
   90                   | TK_OC_GE
   91                   | '<'
   92                   | '>'

   93 sumOperator: '+'
   94            | '-'

   95 multiplicationOperator: '*'
   96                       | '/'
   97                       | '%'

   98 powerOperator: '^'

   99 unaryOperator: '+'
  100              | '-'
  101              | '!'
  102              | '&'
  103              | '*'
  104              | '?'
  105              | '#'

  106 variableDeclaration: optionalStatic optionalConst type variable variableDeclarationList

  107 variable: TK_IDENTIFICADOR
  108         | TK_IDENTIFICADOR TK_OC_LE value
  109         | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR

  110 variableDeclarationList: ',' variable variableDeclarationList
  111                        | %empty

  112 functionCall: TK_IDENTIFICADOR '(' functionParameters ')'

  113 functionParameters: expression functionParametersList
  114                   | %empty

  115 functionParametersList: ',' expression functionParametersList
  116                       | %empty

  117 operand: TK_IDENTIFICADOR
  118        | vector_identifier
  119        | value
  120        | functionCall
  121        | '(' expression ')'

  122 vector_identifier: TK_IDENTIFICADOR '[' expression ']'

  123 identifier: TK_IDENTIFICADOR
  124           | TK_IDENTIFICADOR '[' positive_integer ']'

  125 positive_integer: '+' TK_LIT_INT
  126                 | TK_LIT_INT


Terminals, with rules where they appear

    $end (0) 0
    '!' <valor_lexico> (33) 101
    '#' <valor_lexico> (35) 105
    '$' <valor_lexico> (36)
    '%' <valor_lexico> (37) 97
    '&' <valor_lexico> (38) 86 102
    '(' <valor_lexico> (40) 23 56 59 60 112 121
    ')' <valor_lexico> (41) 23 56 59 60 112 121
    '*' <valor_lexico> (42) 95 103
    '+' <valor_lexico> (43) 93 99 125
    ',' <valor_lexico> (44) 9 26 110 115
    '-' <valor_lexico> (45) 94 100
    '.' <valor_lexico> (46)
    '/' <valor_lexico> (47) 96
    ':' <valor_lexico> (58) 60 61
    ';' <valor_lexico> (59) 8 31 32 33 34 35 36 37 38
    '<' <valor_lexico> (60) 91
    '=' <valor_lexico> (61) 39 40
    '>' <valor_lexico> (62) 92
    '?' <valor_lexico> (63) 61 104
    '[' <valor_lexico> (91) 122 124
    ']' <valor_lexico> (93) 122 124
    '^' <valor_lexico> (94) 98
    '{' <valor_lexico> (123) 28
    '|' <valor_lexico> (124) 85
    '}' <valor_lexico> (125) 28
    error (256)
    TK_PR_INT <valor_lexico> (258) 11
    TK_PR_FLOAT <valor_lexico> (259) 12
    TK_PR_BOOL <valor_lexico> (260) 14
    TK_PR_CHAR <valor_lexico> (261) 13
    TK_PR_STRING <valor_lexico> (262) 15
    TK_PR_IF <valor_lexico> (263) 56
    TK_PR_THEN <valor_lexico> (264)
    TK_PR_ELSE <valor_lexico> (265) 57
    TK_PR_WHILE <valor_lexico> (266) 59
    TK_PR_DO <valor_lexico> (267) 59
    TK_PR_INPUT <valor_lexico> (268) 45
    TK_PR_OUTPUT <valor_lexico> (269) 43 44
    TK_PR_RETURN <valor_lexico> (270) 50
    TK_PR_CONST <valor_lexico> (271) 6
    TK_PR_STATIC <valor_lexico> (272) 4
    TK_PR_FOREACH <valor_lexico> (273)
    TK_PR_FOR <valor_lexico> (274) 60
    TK_PR_SWITCH <valor_lexico> (275)
    TK_PR_CASE <valor_lexico> (276)
    TK_PR_BREAK <valor_lexico> (277) 51
    TK_PR_CONTINUE <valor_lexico> (278) 52
    TK_PR_CLASS <valor_lexico> (279)
    TK_PR_PRIVATE <valor_lexico> (280)
    TK_PR_PUBLIC <valor_lexico> (281)
    TK_PR_PROTECTED <valor_lexico> (282)
    TK_PR_END <valor_lexico> (283)
    TK_PR_DEFAULT <valor_lexico> (284)
    TK_OC_LE <valor_lexico> (285) 89 108 109
    TK_OC_GE <valor_lexico> (286) 90
    TK_OC_EQ <valor_lexico> (287) 87
    TK_OC_NE <valor_lexico> (288) 88
    TK_OC_AND <valor_lexico> (289) 84
    TK_OC_OR <valor_lexico> (290) 83
    TK_OC_SL <valor_lexico> (291) 48
    TK_OC_SR <valor_lexico> (292) 49
    TK_LIT_INT <valor_lexico> (293) 16 46 125 126
    TK_LIT_FLOAT <valor_lexico> (294) 17
    TK_LIT_FALSE <valor_lexico> (295) 18
    TK_LIT_TRUE <valor_lexico> (296) 19
    TK_LIT_CHAR <valor_lexico> (297) 20
    TK_LIT_STRING <valor_lexico> (298) 21
    TK_IDENTIFICADOR <valor_lexico> (299) 23 24 26 39 43 45 46 107 108 109 112 117 122 123 124
    TOKEN_ERRO (300)


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    program <node> (72)
        on left: 1 2 3
        on right: 0 1 2
    optionalStatic <node> (73)
        on left: 4 5
        on right: 8 23 106
    optionalConst <node> (74)
        on left: 6 7
        on right: 24 26 106
    globalVariable <node> (75)
        on left: 8
        on right: 1
    globalVariableList <node> (76)
        on left: 9 10
        on right: 8 9
    type <node> (77)
        on left: 11 12 13 14 15
        on right: 8 23 24 26 106
    value <node> (78)
        on left: 16 17 18 19 20 21
        on right: 44 108 119
    functionDefinition <node> (79)
        on left: 22
        on right: 2
    functionHeader <node> (80)
        on left: 23
        on right: 22
    headerParameters <node> (81)
        on left: 24 25
        on right: 23
    headerParametersList <node> (82)
        on left: 26 27
        on right: 24 26
    commandBlock <node> (83)
        on left: 28
        on right: 22 38 56 57 59 60
    commandList <node> (84)
        on left: 29 30
        on right: 28 29
    command <node> (85)
        on left: 31 32 33 34 35 36 37 38
        on right: 29
    attribution <node> (86)
        on left: 39 40
        on right: 32 60
    inputOutput <node> (87)
        on left: 41 42
        on right: 33
    output <node> (88)
        on left: 43 44
        on right: 42
    input <node> (89)
        on left: 45
        on right: 41
    shift <node> (90)
        on left: 46 47
        on right: 35
    shiftOperator <node> (91)
        on left: 48 49
        on right: 46 47
    executionControl <node> (92)
        on left: 50 51 52
        on right: 36
    fluxControl <node> (93)
        on left: 53 54 55
        on right: 37
    conditional <node> (94)
        on left: 56
        on right: 53
    else <node> (95)
        on left: 57 58
        on right: 56
    while <node> (96)
        on left: 59
        on right: 54
    for <node> (97)
        on left: 60
        on right: 55
    expression <node> (98)
        on left: 61 62
        on right: 39 40 50 56 59 60 61 113 115 121 122
    orLogicalExpression <node> (99)
        on left: 63 64
        on right: 61 62 63
    andLogicalExpression <node> (100)
        on left: 65 66
        on right: 63 64 65
    bitwiseOrExpression <node> (101)
        on left: 67 68
        on right: 65 66 67
    bitwiseAndExpression <node> (102)
        on left: 69 70
        on right: 67 68 69
    equalityExpression <node> (103)
        on left: 71 72
        on right: 69 70 71
    comparisonExpression <node> (104)
        on left: 73 74
        on right: 71 72 73
    sumExpression <node> (105)
        on left: 75 76
        on right: 73 74 75
    multiplicationExpression <node> (106)
        on left: 77 78
        on right: 75 76 77
    powerExpression <node> (107)
        on left: 79 80
        on right: 77 78 79
    unaryExpression <node> (108)
        on left: 81 82
        on right: 79 80 81
    orLogicalOperator <node> (109)
        on left: 83
        on right: 63
    andLogicalOperator <node> (110)
        on left: 84
        on right: 65
    bitwiseOrOperator <node> (111)
        on left: 85
        on right: 67
    bitwiseAndOperator <node> (112)
        on left: 86
        on right: 69
    equalityOperator <node> (113)
        on left: 87 88
        on right: 71
    comparisonOperator <node> (114)
        on left: 89 90 91 92
        on right: 73
    sumOperator <node> (115)
        on left: 93 94
        on right: 75
    multiplicationOperator <node> (116)
        on left: 95 96 97
        on right: 77
    powerOperator <node> (117)
        on left: 98
        on right: 79
    unaryOperator <node> (118)
        on left: 99 100 101 102 103 104 105
        on right: 81
    variableDeclaration <node> (119)
        on left: 106
        on right: 31
    variable <node> (120)
        on left: 107 108 109
        on right: 106 110
    variableDeclarationList <node> (121)
        on left: 110 111
        on right: 106 110
    functionCall <node> (122)
        on left: 112
        on right: 34 120
    functionParameters <node> (123)
        on left: 113 114
        on right: 112
    functionParametersList <node> (124)
        on left: 115 116
        on right: 113 115
    operand <node> (125)
        on left: 117 118 119 120 121
        on right: 82
    vector_identifier <node> (126)
        on left: 122
        on right: 40 47 118
    identifier <node> (127)
        on left: 123 124
        on right: 8 9
    positive_integer <node> (128)
        on left: 125 126
        on right: 47 124


State 0

    0 $accept: • program $end

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 3 (program)
    $default  reduce using rule 5 (optionalStatic)

    program             go to state 2
    optionalStatic      go to state 3
    globalVariable      go to state 4
    functionDefinition  go to state 5
    functionHeader      go to state 6


State 1

    4 optionalStatic: TK_PR_STATIC •

    $default  reduce using rule 4 (optionalStatic)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    8 globalVariable: optionalStatic • type identifier globalVariableList ';'
   23 functionHeader: optionalStatic • type TK_IDENTIFICADOR '(' headerParameters ')'

    TK_PR_INT     shift, and go to state 8
    TK_PR_FLOAT   shift, and go to state 9
    TK_PR_BOOL    shift, and go to state 10
    TK_PR_CHAR    shift, and go to state 11
    TK_PR_STRING  shift, and go to state 12

    type  go to state 13


State 4

    1 program: globalVariable • program

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 3 (program)
    $default  reduce using rule 5 (optionalStatic)

    program             go to state 14
    optionalStatic      go to state 3
    globalVariable      go to state 4
    functionDefinition  go to state 5
    functionHeader      go to state 6


State 5

    2 program: functionDefinition • program

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 3 (program)
    $default  reduce using rule 5 (optionalStatic)

    program             go to state 15
    optionalStatic      go to state 3
    globalVariable      go to state 4
    functionDefinition  go to state 5
    functionHeader      go to state 6


State 6

   22 functionDefinition: functionHeader • commandBlock

    '{'  shift, and go to state 16

    commandBlock  go to state 17


State 7

    0 $accept: program $end •

    $default  accept


State 8

   11 type: TK_PR_INT •

    $default  reduce using rule 11 (type)


State 9

   12 type: TK_PR_FLOAT •

    $default  reduce using rule 12 (type)


State 10

   14 type: TK_PR_BOOL •

    $default  reduce using rule 14 (type)


State 11

   13 type: TK_PR_CHAR •

    $default  reduce using rule 13 (type)


State 12

   15 type: TK_PR_STRING •

    $default  reduce using rule 15 (type)


State 13

    8 globalVariable: optionalStatic type • identifier globalVariableList ';'
   23 functionHeader: optionalStatic type • TK_IDENTIFICADOR '(' headerParameters ')'

    TK_IDENTIFICADOR  shift, and go to state 18

    identifier  go to state 19


State 14

    1 program: globalVariable program •

    $default  reduce using rule 1 (program)


State 15

    2 program: functionDefinition program •

    $default  reduce using rule 2 (program)


State 16

   28 commandBlock: '{' • commandList '}'

    TK_PR_IF          shift, and go to state 20
    TK_PR_WHILE       shift, and go to state 21
    TK_PR_INPUT       shift, and go to state 22
    TK_PR_OUTPUT      shift, and go to state 23
    TK_PR_RETURN      shift, and go to state 24
    TK_PR_STATIC      shift, and go to state 1
    TK_PR_FOR         shift, and go to state 25
    TK_PR_BREAK       shift, and go to state 26
    TK_PR_CONTINUE    shift, and go to state 27
    TK_IDENTIFICADOR  shift, and go to state 28
    '{'               shift, and go to state 16

    '}'       reduce using rule 30 (commandList)
    $default  reduce using rule 5 (optionalStatic)

    optionalStatic       go to state 29
    commandBlock         go to state 30
    commandList          go to state 31
    command              go to state 32
    attribution          go to state 33
    inputOutput          go to state 34
    output               go to state 35
    input                go to state 36
    shift                go to state 37
    executionControl     go to state 38
    fluxControl          go to state 39
    conditional          go to state 40
    while                go to state 41
    for                  go to state 42
    variableDeclaration  go to state 43
    functionCall         go to state 44
    vector_identifier    go to state 45


State 17

   22 functionDefinition: functionHeader commandBlock •

    $default  reduce using rule 22 (functionDefinition)


State 18

   23 functionHeader: optionalStatic type TK_IDENTIFICADOR • '(' headerParameters ')'
  123 identifier: TK_IDENTIFICADOR •
  124           | TK_IDENTIFICADOR • '[' positive_integer ']'

    '('  shift, and go to state 46
    '['  shift, and go to state 47

    $default  reduce using rule 123 (identifier)


State 19

    8 globalVariable: optionalStatic type identifier • globalVariableList ';'

    ','  shift, and go to state 48

    $default  reduce using rule 10 (globalVariableList)

    globalVariableList  go to state 49


State 20

   56 conditional: TK_PR_IF • '(' expression ')' commandBlock else

    '('  shift, and go to state 50


State 21

   59 while: TK_PR_WHILE • '(' expression ')' TK_PR_DO commandBlock

    '('  shift, and go to state 51


State 22

   45 input: TK_PR_INPUT • TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 52


State 23

   43 output: TK_PR_OUTPUT • TK_IDENTIFICADOR
   44       | TK_PR_OUTPUT • value

    TK_LIT_INT        shift, and go to state 53
    TK_LIT_FLOAT      shift, and go to state 54
    TK_LIT_FALSE      shift, and go to state 55
    TK_LIT_TRUE       shift, and go to state 56
    TK_LIT_CHAR       shift, and go to state 57
    TK_LIT_STRING     shift, and go to state 58
    TK_IDENTIFICADOR  shift, and go to state 59

    value  go to state 60


State 24

   50 executionControl: TK_PR_RETURN • expression

    TK_LIT_INT        shift, and go to state 53
    TK_LIT_FLOAT      shift, and go to state 54
    TK_LIT_FALSE      shift, and go to state 55
    TK_LIT_TRUE       shift, and go to state 56
    TK_LIT_CHAR       shift, and go to state 57
    TK_LIT_STRING     shift, and go to state 58
    TK_IDENTIFICADOR  shift, and go to state 61
    '('               shift, and go to state 62
    '+'               shift, and go to state 63
    '-'               shift, and go to state 64
    '*'               shift, and go to state 65
    '!'               shift, and go to state 66
    '&'               shift, and go to state 67
    '#'               shift, and go to state 68
    '?'               shift, and go to state 69

    value                     go to state 70
    expression                go to state 71
    orLogicalExpression       go to state 72
    andLogicalExpression      go to state 73
    bitwiseOrExpression       go to state 74
    bitwiseAndExpression      go to state 75
    equalityExpression        go to state 76
    comparisonExpression      go to state 77
    sumExpression             go to state 78
    multiplicationExpression  go to state 79
    powerExpression           go to state 80
    unaryExpression           go to state 81
    unaryOperator             go to state 82
    functionCall              go to state 83
    operand                   go to state 84
    vector_identifier         go to state 85


State 25

   60 for: TK_PR_FOR • '(' attribution ':' expression ':' attribution ')' commandBlock

    '('  shift, and go to state 86


State 26

   51 executionControl: TK_PR_BREAK •

    $default  reduce using rule 51 (executionControl)


State 27

   52 executionControl: TK_PR_CONTINUE •

    $default  reduce using rule 52 (executionControl)


State 28
